Changed SCSS for invisible logo bug

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,6 +61,9 @@ body {
   width: 40%;
   height: auto;
   object-fit: cover;
+  @media (min-width: 600px) {
+    display: flex;
+  }
   @media (max-width: 600px) {
     display: none;
   }
@@ -73,6 +76,9 @@ body {
   object-fit: cover;
   @media (min-width: 601px) {
     display: none;
+  }
+  @media (max-width: 600px) {
+    display: flex;
   }
 }
 
